--- a/pages/agents.mdx
+++ b/pages/agents.mdx
@@ -1,1 +1,42 @@
+import { Callout, Steps } from 'nextra/components'
+
 # Agents
+
+**Agents perform tasks on your behalf using the connections to the apps you've configured them with.**
+
+<Callout type="info">
+We are currently working on Agent teams, a feature where Agents can interact with eachother.
+</Callout>
+
+## Configuring Your Agent
+
+Agents are created within a project. When you create an agent, you provide it with a name and a description.
+
+To configure your agent, follow these steps:
+
+<Steps>
+### Instructions
+Provide instructions on how you want your agent to behave.
+
+### Connections
+Give your agent access to the connections (apps) you want it to have. Note: Only connect one connection of a single app for best results.
+
+</Steps>
+
+When you give an agent access to a connection, it can perform actions using that app integration.
+
+## Triggering Agents
+
+Agents can be triggered in two ways:
+- Through chat
+- Through a workflow action (Run Agent)
+
+We are working on adding features so that agents can call other agents and listen to app integration triggers.
+
+## Chatting with Your Agent
+
+When you chat with an agent, it will execute the command you gave it. For example, if you instruct your agent to send an email and have given it access to your Gmail connection, it will send an email from your Gmail account.
+
+<Callout>
+For support or any questions, please contact us at [support@lecca.io](mailto:support@lecca.io).
+</Callout>
