--- a/pages/executions.mdx
+++ b/pages/executions.mdx
@@ -1,1 +1,24 @@
+import { Callout } from 'nextra/components'
+
 # Executions
+
+Executions are created when a workflow is triggered. Each execution provides a history of the workflow that ran.
+
+## Execution History
+
+The execution history is useful for:
+- Debugging steps
+- Viewing the output of different steps
+
+If an execution fails, it will indicate why it failed and you can examine the specific step where the failure occurred.
+
+<Callout emoji="🔍">
+The history of executions varies depending on your plan.
+
+- **Starter Plan:** 1 Week
+- **Professional Plan:** 1 Month
+- **Team Plan:** 3 Month
+- **Business Plan:** 6 months
+</Callout>
+
+For more details or support, please contact us at [support@lecca.io](mailto:support@lecca.io).
