--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,7 +1,37 @@
-# Introduction
- 
-Welcome to Lecca.io! 
+import { Cards, Card, Callout } from 'nextra/components';
 
-## What is Lecca.io?
+# Lecca.io Documentation
 
-A **powerful**, **intuitive** and **flexible** workflow automation framework tool.
+**Welcome to the Lecca.io documentation! We will provide all the information you need to create AI Agents and Workflow Automations.**
+
+<Callout emoji="👋" type="info">
+  Start here to learn how to set up your workspace, invite team members, create app connections, and begin creating projects and workflows.
+</Callout>
+
+## Getting Started
+
+<Cards>
+  <Card title="Inviting Team Members" href="/team" />
+</Cards>
+
+
+## Projects and Workflows
+
+<Cards>
+  <Card title="Creating Projects" href="/projects" />
+  <Card title="Managing Workflow Automations" href="/workflows" />
+  <Card title="Creating AI Agents" href="/agents" />
+</Cards>
+
+## App Integrations
+
+<Cards>
+  <Card title="Connecting Your Apps" href="/connections" />
+</Cards>
+
+<br/>
+<br/>
+
+<Callout emoji="✨">
+  Thank you for choosing Lecca.io to build your workflows and agents! If you need further assistance, feel free to explore our resources or contact support at support@lecca.io.
+</Callout>
