--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -1,1 +1,36 @@
+import { Callout } from 'nextra/components';
+
 # Projects
+
+**A project is a powerful way to organize your workpace's workflows and agents.**
+
+<Callout type="info">
+  On the **Starter** plan, you can only have one project your workspace. Upgrade to the **Professional**, **Team**, or **Business** plans to create multiple projects.
+</Callout>
+
+## Workflows
+
+Workflows must be created within a project. There is no limit to the number of workflows you can add to a project, regardless of plan.
+
+Learn more about workflows at in our [Workflows documentation](/workflows)
+
+## Agents
+
+Agents must be created within a project. There is no limit to the number of agents you can add to a project, regardless of plan.
+
+Learn more about agents at in our [Agents documentation](/agents)
+
+## Variables
+
+Variables can be created at a workspace level, to be used by any project, but a variable can be created at a project level. If a variable is created at a project level, it can only be used within that project.
+
+Learn more about variables at in our [Variables documentation](/variables)
+
+## Connections
+
+Connections can be created at a workspace level, to be used by any project, but a connection can be created at a project level. If a connection is created at a project level, it can only be used within that project.
+
+Learn more about connections at in our [Connections documentation](/connections)
+
+
+
