--- a/pages/variables.mdx
+++ b/pages/variables.mdx
@@ -1,1 +1,46 @@
+import { Callout, Cards, Card, Steps } from 'nextra/components'
+
 # Variables
+
+You can create a **variable** in Lecca.io to use within workflow actions. This is useful for referencing common values like names, emails, phrases, dates, numbers, and more as a variable.
+
+## Types of Variables
+
+There are four types of variables you can create:
+- **String**: Text values.
+- **Number**: Numeric values.
+- **Boolean**: True/False values.
+- **Date**: Date values.
+
+## Creating Variables
+
+Variables can be created at both the **workspace** and **project** levels.
+
+<Callout emoji="💡">
+  Note: To create a project-level variable, select the desired project from the project dropdown when creating the variable.
+</Callout>
+
+<Steps>
+### Go to the Variables page
+
+Navigate to the **Variables** page to create a new variable.
+
+### Open the New Variable dialog
+
+Click on **New Variable**.
+
+### Select the variable type
+
+Select the **variable type**: String, Number, Boolean, or Date.
+
+### Enter value
+
+Enter the variable details.
+
+### Save 
+
+Save your variable.
+</Steps>
+
+
+For further assistance, contact us at support@lecca.io.
