--- a/pages/workspaces.mdx
+++ b/pages/workspaces.mdx
@@ -1,1 +1,35 @@
+import { Cards, Card, Callout, Steps } from 'nextra/components';
+
 # Workspaces
+
+**Workspaces in Lecca.io are where you organize your projects, collaborate with your team, and manage your automations and agents.**
+
+## Creating a new Workspace
+
+Setting up a workspace in Lecca.io helps you organize your projects and manage your resources efficiently. Follow these steps to create and configure your workspace. 
+
+<Callout type="info">
+    When you create an account, you will automatically have a personal workspace created for you.  
+</Callout>
+
+<Steps>
+### Step 1: Create a new Workspace
+
+1. At the top of your screen, click on your Workspace to display the workspace selection menu. 
+2. Select **New Workspace** from the dropdown menu.
+3. Enter a name for your workspace and provide a brief description if needed.
+4. Click **Create** to create the workspace.
+
+### Step 2: Complete onboarding
+
+1. Our onboarding wizard will guide you through the process of setting up your new workspace.
+
+</Steps>
+
+<Callout emoji="🚀">
+  Your workspace is now set up and ready for collaboration! Start creating projects and workflow automations with your team.
+</Callout>
+
+## Managing your Workspace
+
+Only Maintainers can manage workspaces. As a Maintainer, you can invite team members, manage billing, and more. 
