--- a/pages/triggers.mdx
+++ b/pages/triggers.mdx
@@ -1,1 +1,38 @@
+import { Callout, Steps} from 'nextra/components'
+
 # Triggers
+
+Triggers initiate workflows and can be either polling-based or webhook-based.
+
+## Types of Triggers
+
+### Polling
+
+- **Non-Business Plan**: Checks for updates every 5 minutes.
+- **Business Plan**: Checks for updates every 1 minute.
+
+### Webhooks
+
+Webhook triggers fire instantly once our servers receive the trigger from the app.
+
+<Callout emoji="⏰">
+  Note: Choose your plan wisely based on how frequently you need your triggers to check for updates.
+</Callout>
+
+## Adding a Trigger to a Workflow
+
+When adding a trigger to a workflow, follow these steps:
+
+<Steps>
+### Step 1
+ 
+Add your desired trigger to the workflow.
+
+### Step 2
+ 
+Run **Save & Test**. This allows you to map the output of the trigger to the input of subsequent actions.
+</Steps>
+
+## Agent Triggers
+
+Agent triggers behave similarly to workflow triggers. The output of an agent's trigger is sent as a prompt to the agent. Based on its instructions and available apps/tools, it will determine what action to take next.
