--- a/pages/workflows.mdx
+++ b/pages/workflows.mdx
@@ -7,7 +7,8 @@ import { Callout, Steps } from 'nextra/components';
 ## Workflow Triggers
 
 <Callout type="info">
-    For in depth understanding of Triggers go to our [Trigger documentation](/triggers)
+  For in depth understanding of Triggers go to our [Trigger
+  documentation](/triggers)
 </Callout>
 
 Workflows all start with a trigger. There are custom triggers like "Manually Run" and "Trigger by Agent," or you can use different triggers offered by our app integrations.
@@ -18,12 +19,13 @@ Workflows all start with a trigger. There are custom triggers like "Manually Run
 Triggers are either activated by:
 
 - **Webhook:** Instant triggering.
-- **Polling:** Default polling interval of 5 minutes, or 1 minute for Business plan users.
+- **Polling:** Default polling interval of 15 minutes for Starter plan, or 5 for Professional and Team, and 1 minute for Business plan users.
 
 ## Workflow Actions
 
 <Callout type="info">
-    For in depth understanding of Actions go to our [Action documentation](/actions)
+  For in depth understanding of Actions go to our [Action
+  documentation](/actions)
 </Callout>
 
 Once a workflow is triggered, all the actions in the workflow are executed sequentially.
@@ -65,8 +67,9 @@ If you need to make connections, make the connections directly from your node co
 Test and debug your workflow.
 
 ### Save
- 
- Saving a node saves the entire workflow, but you can also save the workflow by clicking the save button on the top right.
+
+Saving a node saves the entire workflow, but you can also save the workflow by clicking the save button on the top right.
+
 </Steps>
 
 ## Mapping outputs to inputs
@@ -87,25 +90,24 @@ Click the **Save & Test** button to open a dropdown.
 Select either **Use Mock Data** or **Use Real Data**.
 
 <Callout type="info">
-    1. **Use Mock Data:** Returns a sample response
-    2. **Use Real Data:** Creates a real call to the app integration endpoint and returns the real response.
+  1. **Use Mock Data:** Returns a sample response 2. **Use Real Data:** Creates
+  a real call to the app integration endpoint and returns the real response.
 </Callout>
 <Callout type="info">
-    Once you have ran **Save & Test**, you can map the response to another action or trigger input.
+  Once you have ran **Save & Test**, you can map the response to another action
+  or trigger input.
 </Callout>
- 
-### Test & Debug
- 
-Test and debug your workflow.
+### Test & Debug Test and debug your workflow.
 
 ### Save
- 
- Saving a node saves the entire workflow, but you can also save the workflow by clicking the save button on the top right.
+
+Saving a node saves the entire workflow, but you can also save the workflow by clicking the save button on the top right.
+
 </Steps>
 
 <Callout>
-    A node is an action or a trigger in a workflow. When you add a trigger or action to a workflow, you are adding a node.
+  A node is an action or a trigger in a workflow. When you add a trigger or
+  action to a workflow, you are adding a node.
 </Callout>
-
 
 For further assistance, please contact [support@lecca.io](mailto:support@lecca.io).
