--- a/pages/workspaces.mdx
+++ b/pages/workspaces.mdx
@@ -6,16 +6,17 @@ import { Cards, Card, Callout, Steps } from 'nextra/components';
 
 ## Creating a new Workspace
 
-Setting up a workspace in Lecca.io helps you organize your projects and manage your resources efficiently. Follow these steps to create and configure your workspace. 
+Setting up a workspace in Lecca.io helps you organize your projects and manage your resources efficiently. Follow these steps to create and configure your workspace.
 
 <Callout type="info">
-    When you create an account, you will automatically have a personal workspace created for you.  
+  When you create an account, you will automatically have a personal workspace
+  created for you.
 </Callout>
 
 <Steps>
 ### Step 1: Create a new Workspace
 
-1. At the top of your screen, click on your Workspace to display the workspace selection menu. 
+1. At the top of your screen, click on your Workspace to display the workspace selection menu.
 2. Select **New Workspace** from the dropdown menu.
 3. Enter a name for your workspace and provide a brief description if needed.
 4. Click **Create** to create the workspace.
@@ -27,9 +28,19 @@ Setting up a workspace in Lecca.io helps you organize your projects and manage y
 </Steps>
 
 <Callout emoji="🚀">
-  Your workspace is now set up and ready for collaboration! Start creating projects and workflow automations with your team.
+  Your workspace is now set up and ready for collaboration! Start creating
+  projects and workflow automations with your team.
 </Callout>
 
 ## Managing your Workspace
 
-Only Maintainers can manage workspaces. As a Maintainer, you can invite team members, manage billing, and more. 
+Only Maintainers can manage workspaces. As a Maintainer, you can invite team members, manage billing, and more.
+
+## Deleting your Workspace
+
+You can delete an additional workspace by going to your workspace settings, after you have cancelled your subscription. You can cancel your subscription by going to your workspace billing settings and clicking on the link **Manage payment methods**.
+
+<Callout>
+  You cannot delete your default created workspace (The workspace created when
+  you first made your account).
+</Callout>
