--- a/pages/billing.mdx
+++ b/pages/billing.mdx
@@ -11,12 +11,23 @@ import { Cards, Card, Callout, Steps } from 'nextra/components';
 
 <Steps>
 
-### Monthly Allotment
+### Daily Allotment
 
-All payment plans receive a monthly allotment of **100,000 credits**.
-However, note that only the **default created workspace** of a user gets
-this monthly allotment. This policy prevents the creation of unlimited
-workspaces with free credits.
+Different payment plans receive a different daily allotment of tokens.
+
+**Starter** receives **7,000** per day.
+
+**Professional** receives **50,000** per day.
+
+**Team** receives **300,000** per day.
+
+**Business** receives **800,000** per day.
+
+<Callout>
+  However, note that only the **default created workspace** of a user gets this
+  monthly allotment when on a starter (free) plan. This policy prevents the
+  creation of unlimited workspaces with free credits.
+</Callout>
 
 ### AI Agent Usage
 
@@ -24,20 +35,4 @@ Credits are used as AI tokens when you converse with or have your AI Agent
 perform a task. Each interaction or task consumes a specified number of
 credits.
 
-### Purchasing Additional Credits
-
-If you require more credits than the monthly allotment, you can purchase
-additional credits separately. Your purchased credits do not reset every
-month, unlike the monthly allotment which does.
-
-### Workflow Usage
-
-Credits are also utilized when you execute workflows. The number of credits
-consumed is determined by the time a step takes to execute.
-
 </Steps>
-
-<Callout type="error">
-  Important: Monitor your credit usage to avoid running out of credits in the
-  middle of critical tasks. Make sure to purchase additional credits as needed.
-</Callout>
