--- a/pages/knowledge.mdx
+++ b/pages/knowledge.mdx
@@ -50,7 +50,7 @@ In future conversations, when you ask your AI Agent questions, the agent will re
 
 - Starter Plan: Limited to 1 knowledge notebook.
 
-- Professional Plan, Team, and Business: Allows creation of multiple knowledge notebooks for various use cases. When
+- Professional and Team Plan: Allows creation of multiple knowledge notebooks for various use cases. When
   saving data to a knowledge notebook, it consumes credits based on the size of the
   content. Organize your knowledge into different notebooks to facilitate faster and
   more accurate data retrieval.
