--- a/pages/team.mdx
+++ b/pages/team.mdx
@@ -12,10 +12,11 @@ There are 2 types of roles, **Maintainers** and **Members**.
 
 1. Can invite and remove team members to/from the workspace. This is not the same as inviting to a project. All members of a project can invite users to a project.
 2. Can update the workspace subscription plan and update payment methods.
-3. Can view all projects, executions, connections, variables, .etc. 
+3. Can view all projects, executions, connections, variables, .etc.
 
 <Callout>
-  Maintainers can view and perform actions on anything within their workspace. Including projects they're not explicitly invited to.
+  Maintainers can view and perform actions on anything within their workspace.
+  Including projects they're not explicitly invited to.
 </Callout>
 
 ### Member
@@ -27,7 +28,9 @@ There are 2 types of roles, **Maintainers** and **Members**.
 ## Inviting Team Members
 
 <Callout type="info">
-  On the **Starter** or **Professional** plans, you can only have one team member in your workspace. Upgrade to the **Team** or **Business** plans to invite additional members.
+  On the **Starter** or **Professional** plans, you can only have one team
+  member in your workspace. Upgrade to the **Team** plans to invite additional
+  members.
 </Callout>
 
 <Steps>
@@ -37,7 +40,7 @@ To invite a team member to your workspace, select **Invite** on the overview pag
 
 ### Step 2. Enter Email
 
-Enter the email address of the person you want to invite. 
+Enter the email address of the person you want to invite.
 
 ### Step 3. Choose Role
 
