--- a/pages/triggers.mdx
+++ b/pages/triggers.mdx
@@ -10,8 +10,7 @@ Triggers initiate workflows and can be either polling-based or webhook-based.
 
 - **Start Plan**: Checks for updates every 15 minutes.
 - **Professional Plan**: Checks for updates every 5 minutes.
-- **Team Plan**: Checks for updates every 5 minutes.
-- **Business Plan**: Checks for updates every 1 minute.
+- **Team Plan**: Checks for updates every minute.
 
 ### Webhooks
 
