--- a/pages/workflows.mdx
+++ b/pages/workflows.mdx
@@ -19,7 +19,7 @@ Workflows all start with a trigger. There are custom triggers like "Manually Run
 Triggers are either activated by:
 
 - **Webhook:** Instant triggering.
-- **Polling:** Default polling interval of 15 minutes for Starter plan, or 5 for Professional and Team, and 1 minute for Business plan users.
+- **Polling:** Default polling interval of 15 minutes for Starter plan, or 5 for Professional plan, and 1 minute for Team plan users.
 
 ## Workflow Actions
 
