--- a/pages/executions.mdx
+++ b/pages/executions.mdx
@@ -1,4 +1,4 @@
-import { Callout } from 'nextra/components'
+import { Callout } from 'nextra/components';
 
 # Executions
 
@@ -7,6 +7,7 @@ Executions are created when a workflow is triggered. Each execution provides a h
 ## Execution History
 
 The execution history is useful for:
+
 - Debugging steps
 - Viewing the output of different steps
 
@@ -17,8 +18,7 @@ The history of executions varies depending on your plan.
 
 - **Starter Plan:** 1 Week
 - **Professional Plan:** 1 Month
-- **Team Plan:** 3 Month
-- **Business Plan:** 6 months
-</Callout>
+- **Team Plan:** 1 Month
+  </Callout>
 
 For more details or support, please contact us at [support@lecca.io](mailto:support@lecca.io).
