--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -5,7 +5,8 @@ import { Callout } from 'nextra/components';
 **A project is a powerful way to organize your workpace's workflows and agents.**
 
 <Callout type="info">
-  On the **Starter** plan, you can only have one project your workspace. Upgrade to the **Professional**, **Team**, or **Business** plans to create multiple projects.
+  On the **Starter** plan, you can only have one project your workspace. Upgrade
+  to the **Professional** or **Team** plans to create multiple projects.
 </Callout>
 
 ## Workflows
@@ -31,6 +32,3 @@ Learn more about variables at in our [Variables documentation](/variables)
 Connections can be created at a workspace level, to be used by any project, but a connection can be created at a project level. If a connection is created at a project level, it can only be used within that project.
 
 Learn more about connections at in our [Connections documentation](/connections)
-
-
-
