--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -11,13 +11,13 @@ import { Callout } from 'nextra/components';
 
 ## Workflows
 
-Workflows must be created within a project. There is no limit to the number of workflows you can add to a project, regardless of plan.
+Workflows must be created within a project.
 
 Learn more about workflows at in our [Workflows documentation](/workflows)
 
 ## Agents
 
-Agents must be created within a project. There is no limit to the number of agents you can add to a project, regardless of plan.
+Agents must be created within a project.
 
 Learn more about agents at in our [Agents documentation](/agents)
 
